<resources>
    <string name="app_name">testmonitor</string>


    <string name="action_settings">Settings</string>
    <string name="addressDescription">Address and port that parent must pair to</string>
    <string name="addressTitle">Address:</string>
    <string name="childDescription">Device is placed with baby, and sends audio to a paired parent device</string>
    <string name="childDevice">Child Device</string>
    <string name="connect">Connect</string>
    <string name="connectedTo">Connected To:</string>
    <string name="disconnected">Disconnected</string>
    <string name="discoverChild">Discover Child on Network</string>
    <string name="discoverChildDescription">Select child from a list of discovered children on the network</string>
    <string name="enterAddressInstructions">Enter the IP Address and port of a child and click Connect</string>
    <string name="enterChildAddress">Select Child by Address</string>
    <string name="enterChildAddressDescription">Enter the address and port of the child</string>
    <string name="exampleAddress">192.168.1.2</string>
    <string name="examplePort">10000</string>
    <string name="invalidAddress">The address field needs to be filled out</string>
    <string name="invalidPort">Either no port was entered or it is invalid</string>
    <string name="listening">Listening...</string>
    <string name="loading">Loading...</string>
    <string name="parentDescription">Pairs with child device and plays received audio</string>
    <string name="parentDevice">Parent Device</string>
    <string name="portTitle">Port:</string>
    <string name="selectChildDevice">Select Child Device:</string>
    <string name="serviceDescription">Name of the service that parent must pair to</string>
    <string name="serviceTitle">Service:</string>
    <string name="status">Status:</string>
    <string name="stopped">Stopped</string>
    <string name="streaming">Streaming...</string>
    <string name="useAsChildDevice">Use as Child Device</string>
    <string name="useAsParentDevice">Use as Parent Device</string>
    <string name="waitingForParent">Waiting for Parent...</string>
    <string name="wifiNotConnected">Not connected to a Wi-Fi network</string>

</resources>