<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/LinearLayout1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="25sp" android:gravity="center" android:id="@+id/parentDeviceTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/parentDevice"/>
    <Space android:layout_width="match_parent" android:layout_height="15dp"/>
    <TextView android:id="@+id/enterAddressInstructions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enterAddressInstructions"/>
    <Space android:layout_width="match_parent" android:layout_height="15dp"/>
    <TextView android:textSize="20sp" android:id="@+id/ipAddressTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addressTitle"/>
    <EditText android:textSize="20sp" android:id="@+id/ipAddressField" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/exampleAddress" android:ems="10" android:inputType="textUri" android:nextFocusForward="@+id/portField"/>
    <TextView android:textSize="20sp" android:id="@+id/portTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/portTitle"/>
    <EditText android:textSize="20sp" android:id="@+id/portField" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/examplePort" android:ems="10" android:maxLength="5" android:inputType="number" android:nextFocusForward="@+id/connectViaAddressButton"/>
    <Space android:layout_width="match_parent" android:layout_height="15dp"/>
    <Button android:layout_gravity="center" android:id="@+id/connectViaAddressButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connect"/>
</LinearLayout>
