<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/LinearLayout1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent" android:keepScreenOn="true">
    <TextView android:textSize="25sp" android:gravity="center" android:id="@+id/childDeviceTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/childDevice"/>
    <Space android:layout_width="match_parent" android:layout_height="15dp"/>
    <TextView android:textSize="20sp" android:id="@+id/serviceTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serviceTitle"/>
    <TextView android:textSize="20sp" android:id="@+id/textService" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading"/>
    <TextView android:id="@+id/serviceDescription" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serviceDescription"/>
    <Space android:layout_width="match_parent" android:layout_height="15dp"/>
    <TextView android:textSize="20sp" android:id="@+id/addressTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addressTitle"/>
    <TextView android:textSize="20sp" android:id="@+id/address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=""/>
    <TextView android:textSize="20sp" android:id="@+id/portTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/portTitle"/>
    <TextView android:textSize="20sp" android:id="@+id/port" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading"/>
    <TextView android:id="@+id/addressDescription" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addressDescription"/>
    <Space android:layout_width="match_parent" android:layout_height="15dp"/>
    <TextView android:textSize="20sp" android:id="@+id/textStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=""/>
</LinearLayout>
