<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/LinearLayout1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="25sp" android:gravity="center" android:id="@+id/parentDeviceTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/parentDevice"/>
    <Space android:layout_width="match_parent" android:layout_height="15dp"/>
    <Button android:textSize="17sp" android:id="@+id/discoverChildButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/discoverChild" style="?android:attr/buttonStyleSmall"/>
    <TextView android:textSize="14sp" android:id="@+id/discoverChildDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/discoverChildDescription"/>
    <Space android:layout_width="match_parent" android:layout_height="15dp"/>
    <Button android:textSize="17sp" android:id="@+id/enterChildAddressButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/enterChildAddress" style="?android:attr/buttonStyleSmall"/>
    <TextView android:textSize="14sp" android:id="@+id/enterChildAddressDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/enterChildAddressDescription"/>
</LinearLayout>